# aoc2023

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: days.rs  def.rs  error.rs  lib.rs  prelude.rs
src/days/: mod.rs
src/days/day01/inputs/: example1.txt  mod.rs
src/days/day01/src/: mod.rs
src/days/day02/src/: mod.rs
src/days/day03/src/: mod.rs
src/days/day04/src/: mod.rs
src/days/day05/src/: mappings.rs  mod.rs
src/days/day06/inputs/: mod.rs
src/days/day06/src/: mod.rs
src/days/day07/src/: mod.rs
src/days/day08/inputs/: mod.rs
src/days/day08/src/: mod.rs
src/days/day09/src/: mod.rs
src/days/day10/inputs/: mod.rs
src/days/day10/src/: mod.rs
src/days/day11/src/: mod.rs
src/days/day12/src/: mod.rs
src/days/day13/src/: mod.rs
src/days/day14/: mod.rs
src/days/day14/src/: mod.rs
src/days/day15/src/: mod.rs
src/days/day16/src/: mod.rs
src/days/day17/src/: mod.rs
src/days/day18/src/: bitmap.rs  mod.rs  terminal.rs
src/days/day19/src/: mod.rs
src/days/day20/src/: mod.rs
src/days/day21/src/: main.rs  mod.rs
src/days/day22/src/: mod.rs
src/days/day23/src/: mod.rs
src/days/day24/src/: mod.rs
src/days/day25/: graphviz.txt
src/days/day25/inputs/: mod.rs
src/days/day25/src/: mod.rs
template/src/: mod.rs
