[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
nom = "7.1.3"
num-integer = "0.1.45"
paste = "1.0.14"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"

[[bench]]
name = "bench"
harness = false
